add channels controllers
