# shared/schemas/index.ts
@@ -1,2 +1,3 @@
 export * from "./lib/accounts.schema";
 export * from "./lib/auth.schema";
+export * from "./lib/channels.schema";
