# shared/schemas/lib/accounts.schema.ts
@@ -2,14 +2,22 @@ import { z } from "zod";
 import { Account } from "@prisma/client";
 import zodToJsonSchema from "zod-to-json-schema";
 
+/*
+  ACCOUNT SCHEMA
+*/
+
 export const nonSensitiveAccount = z.object({
   id: z.string().uuid(),
   email: z.string().email(),
   createdAt: z.date(),
   updatedAt: z.date(),
-}) satisfies z.Schema<Omit<Account, "password">>;
+}) satisfies z.Schema<Omit<Account, "password" | "image">>;
 
 export type NonSensitiveAccount = z.infer<typeof nonSensitiveAccount>;
+
+/*
+  CREATE ACCOUNT SCHEMA
+*/
 
 export const accountCreateBody = z.object({
   email: z
@@ -27,7 +35,9 @@ export const accountCreateBody = z.object({
     .regex(/[!@#$%^&*(),.?":{}|<>_]/, {
       message: "Password must contain at least one special character",
     }),
-}) satisfies z.Schema<Omit<Account, "id" | "createdAt" | "updatedAt">>;
+}) satisfies z.Schema<
+  Omit<Account, "id" | "createdAt" | "updatedAt" | "image">
+>;
 
 export type AccountCreateBody = z.infer<typeof accountCreateBody>;
 
@@ -35,7 +45,11 @@ export const AccountCreateRequest = z.object({
   body: accountCreateBody,
 });
 
+/*
+  JSON SCHEMAS
+*/
+
 export const accountJsonSchemas = {
-  AccountNonSensitive: zodToJsonSchema(nonSensitiveAccount),
+  Account: zodToJsonSchema(nonSensitiveAccount),
   AccountCreateBody: zodToJsonSchema(accountCreateBody),
 };
